--- a/public/project/views/guest/guest.view.client.html
+++ b/public/project/views/guest/guest.view.client.html
@@ -38,10 +38,16 @@
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container-fluid col-xs-3 text-center" id="guestlogin">
-        <a href="#/login" class="navbar-link">
-            <span class="glyphicon glyphicon-log-in"></span> Login/Register
-        </a>
+    <div class="container-fluid row">
+        <div class="col-xs-3" id="guestlogin">
+            <div class="navbar-footer">
+                <p class="navbar-text">
+                    <a href="#/login" class="navbar-link">
+                        <span class="glyphicon glyphicon-log-in"></span> Login/Register
+                    </a>
+                </p>
+            </div>
+        </div>
     </div>
     <div class="col-lg-12 copyright text-center">
         <p>Copyright © Snatch 2017</p>
