--- a/public/project/views/admin/admin.view.client.html
+++ b/public/project/views/admin/admin.view.client.html
@@ -81,7 +81,7 @@
                 </a>
             </div>
             <div class="col-xs-6 copyright text-center">
-                <p>Copyright © Snatch 2017</p>
+                <p>©Copyright 2017. Snatch. Cheryl Jia</p>
             </div>
         </div>
     </div>
