--- a/public/project/views/guest/guest.view.client.html
+++ b/public/project/views/guest/guest.view.client.html
@@ -50,6 +50,6 @@
         </div>
     </div>
     <div class="col-lg-12 copyright text-center">
-        <p>Copyright © Snatch 2017</p>
+        <p>©Copyright 2017. Snatch. Cheryl Jia</p>
     </div>
 </nav>
