--- a/public/project/views/snatch/snatch-list.view.client.html
+++ b/public/project/views/snatch/snatch-list.view.client.html
@@ -67,7 +67,7 @@
         </li>
     </ul>
     <div class="col-lg-12 copyright text-center">
-        <p>Copyright © Snatch 2017</p>
+        <p>©Copyright 2017. Snatch. Cheryl Jia</p>
     </div>
 </div>
 
