--- a/public/project/views/theme/theme-edit.view.client.html
+++ b/public/project/views/theme/theme-edit.view.client.html
@@ -51,7 +51,7 @@
     </form>
     <a ng-click="model.deleteTheme(model.themeId)" class="btn btn-danger  btn-block">Delete</a>
     <div class="col-lg-12 copyright text-center">
-        <p>Copyright © Snatch 2017</p>
+        <p>©Copyright 2017. Snatch. Cheryl Jia</p>
     </div>
 </div>
 
