--- a/public/project/views/theme/theme-list.view.client.html
+++ b/public/project/views/theme/theme-list.view.client.html
@@ -136,7 +136,7 @@
         </ul>
     </div>
     <div class="col-lg-12 copyright text-center">
-        <p>Copyright © Snatch 2017</p>
+        <p>©Copyright 2017. Snatch. Cheryl Jia</p>
     </div>
 </div>
 
