--- a/public/project/views/user/login.view.client.html
+++ b/public/project/views/user/login.view.client.html
@@ -37,5 +37,5 @@
 </div>
 
 <div class="col-lg-12 copyright text-center">
-    <p>Copyright © Snatch 2017</p>
+    <p>©Copyright 2017. Snatch. Cheryl Jia</p>
 </div>
